--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Cadastros"
+        android:text="@string/cadastros"
         android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -27,7 +27,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Listar"
+        android:text="@string/listar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="9dp"
         android:layout_marginBottom="87dp"
-        android:text="MedicPlus"
+        android:text="@string/medicplus"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         app:layout_constraintBottom_toTopOf="@+id/btn_cadastroMain"
         app:layout_constraintEnd_toEndOf="parent"
