--- a/app/src/main/res/layout/cadastro_tela.xml
+++ b/app/src/main/res/layout/cadastro_tela.xml
@@ -29,7 +29,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Cadastrar Paciente"
+        android:text="@string/cadastrar_paciente"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -43,7 +43,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Cadastrar Consulta"
+        android:text="@string/cadastrar_consulta"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -57,7 +57,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Cadastrar Médico"
+        android:text="@string/cadastrar_m_dico"
         android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
