--- a/app/src/main/res/layout/consultas_list.xml
+++ b/app/src/main/res/layout/consultas_list.xml
@@ -51,7 +51,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Consultas"
+        android:text="@string/consultas"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
