--- a/app/src/main/res/layout/lista_tela.xml
+++ b/app/src/main/res/layout/lista_tela.xml
@@ -29,7 +29,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Listar Consultas"
+        android:text="@string/listar_consultas"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -43,7 +43,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Listar Médicos"
+        android:text="@string/listar_m_dicos"
         android:textColorLink="#FFFFFF"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -58,7 +58,7 @@
         android:layout_width="196dp"
         android:layout_height="44dp"
         android:background="#9C00BCD4"
-        android:text="Listar Pacientes"
+        android:text="@string/listar_pacientes"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
