--- a/app/src/main/res/layout/medicos_list.xml
+++ b/app/src/main/res/layout/medicos_list.xml
@@ -56,7 +56,7 @@
         android:layout_width="154dp"
         android:layout_height="43dp"
         android:layout_marginTop="20dp"
-        android:text="Médicos"
+        android:text="@string/m_dicos"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
