--- a/app/src/main/res/layout/pacientes_list.xml
+++ b/app/src/main/res/layout/pacientes_list.xml
@@ -67,7 +67,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:text="Pacientes"
+        android:text="@string/pacientes"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
