--- a/app/src/main/res/layout/tela_editar_medico.xml
+++ b/app/src/main/res/layout/tela_editar_medico.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/simb" />
 
     <LinearLayout
-        android:layout_width="396dp"
+        android:layout_width="389dp"
         android:layout_height="632dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical"
@@ -32,112 +32,109 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nome do Médico:" />
+            android:text="@string/nome_do_m_dico" />
 
         <EditText
             android:id="@+id/etNome"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Nome"
+            android:hint="@string/nome"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="CRM:" />
+            android:text="@string/crm" />
 
         <EditText
             android:id="@+id/etCRM"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="CRM"
+            android:hint="@string/crm"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Logradouro:" />
+            android:text="@string/logradouro" />
 
         <EditText
             android:id="@+id/etEndereco"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Logradouro"
+            android:hint="@string/logradouro"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Número:" />
+            android:text="@string/n_mero" />
 
         <EditText
             android:id="@+id/etNum"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Número"
+            android:hint="@string/n_mero"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cidade:" />
+            android:text="@string/cidade" />
 
         <EditText
             android:id="@+id/etCidade"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Cidade"
+            android:hint="@string/cidade"
             android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="UF:" />
+            android:text="@string/uf" />
 
-        <EditText
-            android:id="@+id/etUF"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:hint="UF"
-            android:inputType="textPersonName" />
+        <Spinner
+            android:id="@+id/spUfMedEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefone Celular:" />
+            android:text="@string/telefone_celular" />
 
         <EditText
             android:id="@+id/etCell"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Celular"
+            android:hint="@string/celular"
             android:inputType="phone" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefone Fixo:" />
+            android:text="@string/telefone_fixo" />
 
         <EditText
             android:id="@+id/etTel"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Telefone Fixo"
+            android:hint="@string/telefone_fixo"
             android:inputType="phone" />
 
         <LinearLayout
@@ -152,7 +149,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#9C00BCD4"
-                android:text="Salvar" />
+                android:text="@string/salvar" />
 
             <Button
                 android:id="@+id/btn_exc_edit_medic"
@@ -161,7 +158,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#9C00BCD4"
-                android:text="Excluir" />
+                android:text="@string/excluir" />
         </LinearLayout>
 
     </LinearLayout>
