--- a/app/src/main/res/layout/tela_editar_paciente.xml
+++ b/app/src/main/res/layout/tela_editar_paciente.xml
@@ -19,7 +19,7 @@
         app:srcCompat="@drawable/simb" />
 
     <LinearLayout
-        android:layout_width="402dp"
+        android:layout_width="389dp"
         android:layout_height="626dp"
         android:layout_marginTop="7dp"
         android:orientation="vertical"
@@ -32,21 +32,21 @@
             android:id="@+id/textView2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Nome do Paciente:" />
+            android:text="@string/nome_do_paciente" />
 
         <EditText
             android:id="@+id/etNomePac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Nome" />
+            android:hint="@string/nome"
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Grupo Sanguíneo:" />
+            android:text="@string/grupo_sangu_neo" />
 
         <Spinner
             android:id="@+id/spGrpSan"
@@ -57,85 +57,82 @@
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Logradouro:" />
+            android:text="@string/logradouro" />
 
         <EditText
             android:id="@+id/etEnderecoPAc"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Logradouro" />
+            android:hint="@string/logradouro"
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Número:" />
+            android:text="@string/n_mero" />
 
         <EditText
             android:id="@+id/etNumPAc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Número" />
+            android:hint="@string/n_mero"
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Cidade:" />
+            android:text="@string/cidade" />
 
         <EditText
             android:id="@+id/etCidadPac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="Cidade" />
+            android:hint="@string/cidade"
+            android:inputType="textPersonName" />
 
         <TextView
             android:id="@+id/textView7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="UF:" />
+            android:text="@string/uf" />
 
-        <EditText
-            android:id="@+id/etUFPac"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:ems="10"
-            android:inputType="textPersonName"
-            android:hint="UF" />
+        <Spinner
+            android:id="@+id/spUfPacEdit"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
         <TextView
             android:id="@+id/textView8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefone Celular:" />
+            android:text="@string/telefone_celular" />
 
         <EditText
             android:id="@+id/etCellPac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="phone"
-            android:hint="Celular" />
+            android:hint="@string/celular"
+            android:inputType="phone" />
 
         <TextView
             android:id="@+id/textView9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Telefone Fixo:" />
+            android:text="@string/telefone_fixo" />
 
         <EditText
             android:id="@+id/etTelPac"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="phone"
-            android:hint="Telefone Fixo" />
+            android:hint="@string/telefone_fixo"
+            android:inputType="phone" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -149,7 +146,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#9C00BCD4"
-                android:text="Salvar" />
+                android:text="@string/salvar" />
 
             <Button
                 android:id="@+id/btn_exc_edit_pacient"
@@ -158,7 +155,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:background="#9C00BCD4"
-                android:text="Excluir" />
+                android:text="@string/excluir" />
         </LinearLayout>
 
     </LinearLayout>
